--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-modules/programming_fundamentals/project/Sleep_health_and_lifestyle_dataset.csv
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
-**/__pycache__/
-__pycache__/
+*/__pycache__/*
